# manual-machine-learning

./: dataset.csv  main.ipynb  model_params.json  pyproject.toml
old/: dataset.csv  main.ipynb  model_params.json
