[tool.poetry]
name = "manual-machine-learning"
version = "0.1.0"
description = ""
authors = ["Daffa Ilhami <mdaffailhami@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
polars = "^1.9.0"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
